--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ dependencies:
     sdk: flutter
   provider: ^5.0.0
   cupertino_icons: ^1.0.2
+  http: ^0.13.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
