--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   provider: ^5.0.0
   cupertino_icons: ^1.0.2
   http: ^0.13.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
